added lat lng to bus stop conversion API
